pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: ping-pong-count
          persistentVolumeClaim:
            claimName: ping-pong-claim
      containers:
      - name: ping-pong
        image: jukaveyo/ping-pong:1.11.1
        volumeMounts:
          - name: ping-pong-count
            mountPath: /usr/src/app/files
